[gd_scene load_steps=10 format=2]

[ext_resource path="res://player_first.gd" type="Script" id=1]
[ext_resource path="res://UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://textures/stormdays_dark.jpg" type="Texture" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.572803, 0.607212, 0.680079 )

[sub_resource type="CubeMesh" id=4]

[sub_resource type="CubeMesh" id=5]

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="PanoramaSky" id=2]
panorama = ExtResource( 3 )

[sub_resource type="Environment" id=3]
background_mode = 2
background_sky = SubResource( 2 )
ambient_light_energy = 0.0
ambient_light_sky_contribution = 0.0
fog_enabled = true

[node name="player" type="KinematicBody" groups=[
"player",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.161849, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0, 1, 0, 0, 0, 3, 1, 0, 0, 0, -1.44738, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.5, 0, 0, 0, 2, 0, 0, 0, 0.5, -0.005, -1.58559, -0.015 )
mesh = SubResource( 4 )
material/0 = null

[node name="Control" parent="." instance=ExtResource( 2 )]

[node name="GunBase" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.740041, 0 )

[node name="MeshInstance3" type="MeshInstance" parent="GunBase"]
transform = Transform( 0.08, 0, 0, 0, -0.0181552, 0.194782, 0, -0.0779127, -0.0453881, 0.446, -0.070034, -0.821485 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="MeshInstance2" type="MeshInstance" parent="GunBase"]
transform = Transform( 0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.3, 0.446, 0.00600004, -1.03131 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="CamStaticBase" type="Spatial" parent="."]

[node name="CamBase" type="Spatial" parent="CamStaticBase"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.827705, 0 )

[node name="Camera" type="Camera" parent="CamStaticBase/CamBase"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.417106, 0 )
environment = SubResource( 3 )
current = true
fov = 90.0
size = 10.0
